Im dumb and headerfiles are confusing and causes errors

--- a/Pong2019/Pong2019.vcxproj
+++ b/Pong2019/Pong2019.vcxproj
@@ -129,11 +129,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="EntityManager.cpp" />
     <ClCompile Include="GameEngine.cpp" />
+    <ClCompile Include="InputProcessor.cpp" />
+    <ClCompile Include="KeyMapper.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="EntityManager.h" />
     <ClInclude Include="GameEngine.h" />
+    <ClInclude Include="InputProcessor.h" />
+    <ClInclude Include="KeyMapper.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
